{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 11,
  "lineage": "b693bb71-e7c5-30ef-d7b3-b079aced5515",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:network-acl/acl-09b8279ea34d99ec3",
            "default_network_acl_id": "acl-09b8279ea34d99ec3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09b8279ea34d99ec3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "204105346806",
            "subnet_ids": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-00e084ec2a130ff28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:route-table/rtb-0e99ef771a9860f5d",
            "default_route_table_id": "rtb-0e99ef771a9860f5d",
            "id": "rtb-0e99ef771a9860f5d",
            "owner_id": "204105346806",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00e084ec2a130ff28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:security-group/sg-0ab191636869d191b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ab191636869d191b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "204105346806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-00e084ec2a130ff28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:vpc/vpc-00e084ec2a130ff28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b8279ea34d99ec3",
            "default_route_table_id": "rtb-0e99ef771a9860f5d",
            "default_security_group_id": "sg-0ab191636869d191b",
            "dhcp_options_id": "dopt-0340b4b59c3e267dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e084ec2a130ff28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e99ef771a9860f5d",
            "owner_id": "204105346806",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:network-acl/acl-047040a95bfc5243e",
            "default_network_acl_id": "acl-047040a95bfc5243e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-047040a95bfc5243e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "204105346806",
            "subnet_ids": null,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-05b7a49586f85629c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:route-table/rtb-005c2234f76f384ff",
            "default_route_table_id": "rtb-005c2234f76f384ff",
            "id": "rtb-005c2234f76f384ff",
            "owner_id": "204105346806",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05b7a49586f85629c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:security-group/sg-030dc303469522ab9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-030dc303469522ab9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "204105346806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-05b7a49586f85629c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:vpc/vpc-05b7a49586f85629c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047040a95bfc5243e",
            "default_route_table_id": "rtb-005c2234f76f384ff",
            "default_security_group_id": "sg-030dc303469522ab9",
            "dhcp_options_id": "dopt-008037c173fece309",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b7a49586f85629c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005c2234f76f384ff",
            "owner_id": "204105346806",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}